--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -52,6 +52,10 @@
 <td>test1</td>
 <td>&nbsp;</td></tr>
 <tr>
+<td>&nbsp;</td>
+<td>ArrayMulti</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
