--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,16 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8cc0ba">  <td>20/01/21 11:12:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ListnerDemo.test1()[pri:0, instance:com.TestNGListeners.ListnerDemo@59ec2012]">test1</td> 
-  <td>TestNG-test=Test-1@1307626258</td>   <td></td> </tr>
-<tr bgcolor="8cc0ba">  <td>20/01/21 11:12:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ListnerDemo.test2()[pri:0, instance:com.TestNGListeners.ListnerDemo@59ec2012]">test2</td> 
-  <td>TestNG-test=Test-2@198593619</td>   <td></td> </tr>
-<tr bgcolor="8cc0ba">  <td>20/01/21 11:12:40</td>   <td>32</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ListnerDemo.test3()[pri:0, instance:com.TestNGListeners.ListnerDemo@59ec2012]">test3</td> 
-  <td>TestNG-test=Test-1@1307626258</td>   <td></td> </tr>
-<tr bgcolor="939fd1">  <td>20/01/21 11:12:40</td>   <td>39</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ListnerWaitElement.test6()[pri:0, instance:com.TestNGListeners.ListnerWaitElement@4cf777e8]">test6</td> 
-  <td>TestNG-test=Test-1@1307626258</td>   <td></td> </tr>
-<tr bgcolor="939fd1">  <td>20/01/21 11:12:55</td>   <td>15261</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ListnerWaitElement.test7()[pri:0, instance:com.TestNGListeners.ListnerWaitElement@4cf777e8]">test7</td> 
-  <td>TestNG-test=Test-2@198593619</td>   <td></td> </tr>
-<tr bgcolor="939fd1">  <td>20/01/21 11:13:06</td>   <td>26207</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ListnerWaitElement.test9()[pri:0, instance:com.TestNGListeners.ListnerWaitElement@4cf777e8]">test9</td> 
-  <td>TestNG-test=Test-1@1307626258</td>   <td></td> </tr>
+<tr bgcolor="939fd1">  <td>20/01/22 11:44:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ListnerDemo.ArrayMulti()[pri:0, instance:com.TestNGListeners.ListnerDemo@4cf777e8]">ArrayMulti</td> 
+  <td>main@522764626</td>   <td></td> </tr>
+<tr bgcolor="939fd1">  <td>20/01/22 11:44:51</td>   <td>25</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ListnerDemo.test1()[pri:0, instance:com.TestNGListeners.ListnerDemo@4cf777e8]">test1</td> 
+  <td>main@522764626</td>   <td></td> </tr>
+<tr bgcolor="939fd1">  <td>20/01/22 11:44:51</td>   <td>61</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ListnerDemo.test2()[pri:0, instance:com.TestNGListeners.ListnerDemo@4cf777e8]">test2</td> 
+  <td>main@522764626</td>   <td></td> </tr>
+<tr bgcolor="939fd1">  <td>20/01/22 11:45:03</td>   <td>11373</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ListnerDemo.test3()[pri:0, instance:com.TestNGListeners.ListnerDemo@4cf777e8]">test3</td> 
+  <td>main@522764626</td>   <td></td> </tr>
+<tr bgcolor="8a9f61">  <td>20/01/22 11:45:03</td>   <td>11380</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ListnerWaitElement.test6()[pri:0, instance:com.TestNGListeners.ListnerWaitElement@2f686d1f]">test6</td> 
+  <td>main@522764626</td>   <td></td> </tr>
+<tr bgcolor="8a9f61">  <td>20/01/22 11:45:30</td>   <td>39036</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ListnerWaitElement.test7()[pri:0, instance:com.TestNGListeners.ListnerWaitElement@2f686d1f]">test7</td> 
+  <td>main@522764626</td>   <td></td> </tr>
+<tr bgcolor="8a9f61">  <td>20/01/22 11:45:47</td>   <td>55466</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ListnerWaitElement.test9()[pri:0, instance:com.TestNGListeners.ListnerWaitElement@2f686d1f]">test9</td> 
+  <td>main@522764626</td>   <td></td> </tr>
 </table>
