--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,23 +8,11 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">4</td><td class="num attn">2</td><td class="num attn">1</td><td class="num">55,564</td><td></td><td></td></tr>
+<tr><th colspan="7">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">11,669</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.TestNGListeners.ListnerDemo</td><td><a href="#m0">ArrayMulti</a></td><td rowspan="1">1579673691850</td><td rowspan="1">19</td></tr><tr><th colspan="4">Test &#8212; skipped</th></tr><tr class="skippedeven"><td rowspan="1">com.TestNGListeners.ListnerDemo</td><td><a href="#m1">test3</a></td><td rowspan="1">1579673703223</td><td rowspan="1">1</td></tr><tr class="skippedodd"><td rowspan="1">com.TestNGListeners.ListnerWaitElement</td><td><a href="#m2">test9</a></td><td rowspan="1">1579673747316</td><td rowspan="1">7</td></tr><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.TestNGListeners.ListnerDemo</td><td><a href="#m3">test1</a></td><td rowspan="1">1579673691875</td><td rowspan="1">21</td></tr><tr class="passedeven"><td><a href="#m4">test2</a></td><td rowspan="1">1579673691911</td><td rowspan="1">11309</td></tr><tr class="passedodd"><td rowspan="2">com.TestNGListeners.ListnerWaitElement</td><td><a href="#m5">test6</a></td><td rowspan="1">1579673703230</td><td rowspan="1">27648</td></tr><tr class="passedodd"><td><a href="#m6">test7</a></td><td rowspan="1">1579673730886</td><td rowspan="1">16404</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">selenium_demo.HeadlessDemo</td><td><a href="#m0">test</a></td><td rowspan="1">1579708159236</td><td rowspan="1">11611</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">com.TestNGListeners.ListnerDemo#ArrayMulti</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.ArrayIndexOutOfBoundsException: 2
-	at com.TestNGListeners.ListnerDemo.ArrayMulti(ListnerDemo.java:56)
-... Removed 25 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.TestNGListeners.ListnerDemo#test3</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.testng.SkipException: This test is skipped
-	at com.TestNGListeners.ListnerDemo.test3(ListnerDemo.java:62)
-... Removed 25 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.TestNGListeners.ListnerWaitElement#test9</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.testng.SkipException: This test is skipped
-	at com.TestNGListeners.ListnerWaitElement.test9(ListnerWaitElement.java:105)
-... Removed 25 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">com.TestNGListeners.ListnerDemo#test1</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">com.TestNGListeners.ListnerDemo#test2</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">com.TestNGListeners.ListnerWaitElement#test6</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m6">com.TestNGListeners.ListnerWaitElement#test7</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">selenium_demo.HeadlessDemo#test</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
