--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="94c7ba">  <td>20/01/21 17:33:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ListnerDemo.ArrayMulti()[pri:0, instance:com.TestNGListeners.ListnerDemo@13deb50e]">ArrayMulti</td> 
-  <td>main@1698097425</td>   <td></td> </tr>
-<tr bgcolor="94c7ba">  <td>20/01/21 17:33:14</td>   <td>30</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ListnerDemo.test1()[pri:0, instance:com.TestNGListeners.ListnerDemo@13deb50e]">test1</td> 
-  <td>main@1698097425</td>   <td></td> </tr>
-<tr bgcolor="94c7ba">  <td>20/01/21 17:33:14</td>   <td>38</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ListnerDemo.test2()[pri:0, instance:com.TestNGListeners.ListnerDemo@13deb50e]">test2</td> 
-  <td>main@1698097425</td>   <td></td> </tr>
-<tr bgcolor="94c7ba">  <td>20/01/21 17:33:27</td>   <td>12985</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ListnerDemo.test3()[pri:0, instance:com.TestNGListeners.ListnerDemo@13deb50e]">test3</td> 
-  <td>main@1698097425</td>   <td></td> </tr>
+<tr bgcolor="94c7ba">  <td>20/01/22 21:19:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HeadlessDemo.test()[pri:0, instance:selenium_demo.HeadlessDemo@146ba0ac]">test</td> 
+  <td>main@909295153</td>   <td></td> </tr>
 </table>
