--- a/test-output/old/Suite/groups.html
+++ b/test-output/old/Suite/groups.html
@@ -1,1 +1,6 @@
-<h2>Groups used for this test run</h2>
+<h2>Groups used for this test run</h2><table border="1">
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>AllClassGroup</td><td>TestNGroupsDemo.test03()[pri:0, instance:net.IdeTest.TestNGroupsDemo@f6c48ac]<br/>TestNGroupsDemo.test01()[pri:0, instance:net.IdeTest.TestNGroupsDemo@f6c48ac]<br/>TestNGroupsDemo.test02()[pri:0, instance:net.IdeTest.TestNGroupsDemo@f6c48ac]<br/></td></tr>
+<tr><td>Regression</td><td>TestNGroupsDemo.test03()[pri:0, instance:net.IdeTest.TestNGroupsDemo@f6c48ac]<br/></td></tr>
+<tr><td>Sanity</td><td>TestNGroupsDemo.test03()[pri:0, instance:net.IdeTest.TestNGroupsDemo@f6c48ac]<br/>TestNGroupsDemo.test01()[pri:0, instance:net.IdeTest.TestNGroupsDemo@f6c48ac]<br/>TestNGroupsDemo.test02()[pri:0, instance:net.IdeTest.TestNGroupsDemo@f6c48ac]<br/></td></tr>
+<tr><td>Smoke</td><td>TestNGroupsDemo.test02()[pri:0, instance:net.IdeTest.TestNGroupsDemo@f6c48ac]<br/></td></tr>
+</table>
