--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -4,57 +4,31 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.TestNGListeners.ListnerWaitElement</td>
+<td>net.IdeTest.TestNGroupsDemo</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>test9</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>test6</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>test7</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@BeforeClass</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeMethod</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@AfterMethod</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@AfterClass</td>
-</tr>
-<tr>
-<td>com.TestNGListeners.ListnerDemo</td>
-<td>&nbsp;</td><td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@Test</td>
+<td>test04</td>
+<td>UAT AllClassGroup </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>test2</td>
-<td>&nbsp;</td></tr>
+<td>test03</td>
+<td>Sanity Regression AllClassGroup </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
-<td>test3</td>
-<td>&nbsp;</td></tr>
+<td>test02</td>
+<td>Sanity Smoke AllClassGroup </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
-<td>test1</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>ArrayMulti</td>
-<td>&nbsp;</td></tr>
+<td>test01</td>
+<td>Sanity AllClassGroup </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
