--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,18 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="939fd1">  <td>20/01/24 16:40:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ListnerDemo.ArrayMulti()[pri:0, instance:com.TestNGListeners.ListnerDemo@4cf777e8]">ArrayMulti</td> 
-  <td>main@522764626</td>   <td></td> </tr>
-<tr bgcolor="939fd1">  <td>20/01/24 16:40:34</td>   <td>29</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ListnerDemo.test1()[pri:0, instance:com.TestNGListeners.ListnerDemo@4cf777e8]">test1</td> 
-  <td>main@522764626</td>   <td></td> </tr>
-<tr bgcolor="939fd1">  <td>20/01/24 16:40:34</td>   <td>62</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ListnerDemo.test2()[pri:0, instance:com.TestNGListeners.ListnerDemo@4cf777e8]">test2</td> 
-  <td>main@522764626</td>   <td></td> </tr>
-<tr bgcolor="939fd1">  <td>20/01/24 16:40:49</td>   <td>15115</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ListnerDemo.test3()[pri:0, instance:com.TestNGListeners.ListnerDemo@4cf777e8]">test3</td> 
-  <td>main@522764626</td>   <td></td> </tr>
-<tr bgcolor="8a9f61">  <td>20/01/24 16:40:49</td>   <td>15141</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ListnerWaitElement.test6()[pri:0, instance:com.TestNGListeners.ListnerWaitElement@2f686d1f]">test6</td> 
-  <td>main@522764626</td>   <td></td> </tr>
-<tr bgcolor="8a9f61">  <td>20/01/24 16:40:51</td>   <td>16956</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ListnerWaitElement.test7()[pri:0, instance:com.TestNGListeners.ListnerWaitElement@2f686d1f]">test7</td> 
-  <td>main@522764626</td>   <td></td> </tr>
-<tr bgcolor="8a9f61">  <td>20/01/24 16:41:02</td>   <td>28282</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ListnerWaitElement.test9()[pri:0, instance:com.TestNGListeners.ListnerWaitElement@2f686d1f]">test9</td> 
-  <td>main@522764626</td>   <td></td> </tr>
+<tr bgcolor="80ebad">  <td>20/03/07 02:04:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNGroupsDemo.test01()[pri:0, instance:net.IdeTest.TestNGroupsDemo@f6c48ac]">test01</td> 
+  <td>main@1383547042</td>   <td></td> </tr>
+<tr bgcolor="80ebad">  <td>20/03/07 02:04:18</td>   <td>22</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNGroupsDemo.test02()[pri:0, instance:net.IdeTest.TestNGroupsDemo@f6c48ac]">test02</td> 
+  <td>main@1383547042</td>   <td></td> </tr>
+<tr bgcolor="80ebad">  <td>20/03/07 02:04:18</td>   <td>31</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNGroupsDemo.test03()[pri:0, instance:net.IdeTest.TestNGroupsDemo@f6c48ac]">test03</td> 
+  <td>main@1383547042</td>   <td></td> </tr>
 </table>
