--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,28 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9d62cb">  <td>21/02/16 19:40:49</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ListnerDemo.ArrayMulti()[pri:0, instance:com.TestNGListeners.ListnerDemo@3dfc5fb8]">ArrayMulti</td> 
-  <td>main@1113619023</td>   <td></td> </tr>
-<tr bgcolor="9b7070">  <td>21/02/16 19:39:05</td>   <td>-104448</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ABtest.f()[pri:0, instance:TestNGSample.ABtest@4d50efb8]">f</td> 
-  <td>main@1113619023</td>   <td></td> </tr>
-<tr bgcolor="9768b3">  <td>21/02/16 19:40:49</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNGDependencies.test01()[pri:0, instance:TestNGSample.TestNGDependencies@7e2d773b]">test01</td> 
-  <td>main@1113619023</td>   <td></td> </tr>
-<tr bgcolor="9768b3">  <td>21/02/16 19:40:49</td>   <td>-16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNGDependencies.test02()[pri:1, instance:TestNGSample.TestNGDependencies@7e2d773b]">test02</td> 
-  <td>main@1113619023</td>   <td></td> </tr>
-<tr bgcolor="9768b3">  <td>21/02/16 19:40:49</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNGDependencies.test03()[pri:2, instance:TestNGSample.TestNGDependencies@7e2d773b]">test03</td> 
-  <td>main@1113619023</td>   <td></td> </tr>
-<tr bgcolor="9768b3">  <td>21/02/16 19:40:02</td>   <td>-47259</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNGDependencies.test04()[pri:0, instance:TestNGSample.TestNGDependencies@7e2d773b]">test04</td> 
-  <td>main@1113619023</td>   <td></td> </tr>
-<tr bgcolor="9d62cb">  <td>21/02/16 19:40:49</td>   <td>15</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ListnerDemo.test1()[pri:0, instance:com.TestNGListeners.ListnerDemo@3dfc5fb8]">test1</td> 
-  <td>main@1113619023</td>   <td></td> </tr>
-<tr bgcolor="9d62cb">  <td>21/02/16 19:40:49</td>   <td>15</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ListnerDemo.test2()[pri:0, instance:com.TestNGListeners.ListnerDemo@3dfc5fb8]">test2</td> 
-  <td>main@1113619023</td>   <td></td> </tr>
-<tr bgcolor="9d62cb">  <td>21/02/16 19:40:54</td>   <td>4574</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ListnerDemo.test3()[pri:0, instance:com.TestNGListeners.ListnerDemo@3dfc5fb8]">test3</td> 
-  <td>main@1113619023</td>   <td></td> </tr>
-<tr bgcolor="759b6d">  <td>21/02/16 19:40:02</td>   <td>-47243</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ListnerWaitElement.test6()[pri:0, instance:com.TestNGListeners.ListnerWaitElement@467aecef]">test6</td> 
-  <td>main@1113619023</td>   <td></td> </tr>
-<tr bgcolor="759b6d">  <td>21/02/16 19:40:15</td>   <td>-34938</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ListnerWaitElement.test7()[pri:0, instance:com.TestNGListeners.ListnerWaitElement@467aecef]">test7</td> 
-  <td>main@1113619023</td>   <td></td> </tr>
-<tr bgcolor="759b6d">  <td>21/02/16 19:40:49</td>   <td>-16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ListnerWaitElement.test9()[pri:0, instance:com.TestNGListeners.ListnerWaitElement@467aecef]">test9</td> 
-  <td>main@1113619023</td>   <td></td> </tr>
+<tr bgcolor="c273d3">  <td>21/04/06 18:50:21</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestNGMultipleBrowsers.setup(java.lang.String)[pri:0, instance:net.IdeTest.TestNGMultipleBrowsers@11438d26]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@370463981</td>   <td></td> </tr>
+<tr bgcolor="c273d3">  <td>21/04/06 18:50:21</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestNGMultipleBrowsers.setup(java.lang.String)[pri:0, instance:net.IdeTest.TestNGMultipleBrowsers@3234e239]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@893766096</td>   <td></td> </tr>
+<tr bgcolor="c273d3">  <td>21/04/06 18:50:33</td>   <td>12094</td> <td>&nbsp;</td><td title="&lt;&lt;TestNGMultipleBrowsers.teardown()[pri:0, instance:net.IdeTest.TestNGMultipleBrowsers@11438d26]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@370463981</td>   <td></td> </tr>
+<tr bgcolor="c273d3">  <td>21/04/06 18:50:38</td>   <td>16861</td> <td>&nbsp;</td><td title="&lt;&lt;TestNGMultipleBrowsers.teardown()[pri:0, instance:net.IdeTest.TestNGMultipleBrowsers@3234e239]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@893766096</td>   <td></td> </tr>
+<tr bgcolor="c273d3">  <td>21/04/06 18:50:27</td>   <td>6037</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNGMultipleBrowsers.test1()[pri:0, instance:net.IdeTest.TestNGMultipleBrowsers@11438d26]">test1</td> 
+  <td>TestNG-tests-1@370463981</td>   <td></td> </tr>
+<tr bgcolor="c273d3">  <td>21/04/06 18:50:33</td>   <td>11637</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNGMultipleBrowsers.test1()[pri:0, instance:net.IdeTest.TestNGMultipleBrowsers@3234e239]">test1</td> 
+  <td>TestNG-tests-2@893766096</td>   <td></td> </tr>
 </table>
