--- a/extentReportTestNG.html
+++ b/extentReportTestNG.html
@@ -46,7 +46,7 @@
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<li>
                 <a href='#!'>
-                    <span class='label suite-start-time blue darken-3'>Sep 2, 2020 05:11:04 PM</span>
+                    <span class='label suite-start-time blue darken-3'>Mar 24, 2021 04:30:49 AM</span>
 				</a>
 			</li>
 			<li>
@@ -159,14 +159,14 @@
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='1'>
 					<div class='test-heading'>
 						<span class='test-name'>Enter the product search</span>
-						<span class='test-time'>Sep 2, 2020 05:11:13 PM</span>
+						<span class='test-time'>Mar 24, 2021 04:30:59 AM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Sep 2, 2020 05:11:13 PM</span>
-	<span class='label end-time'>Sep 2, 2020 05:11:16 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 3s+197ms</span>
+	<span class='label start-time'>Mar 24, 2021 04:30:59 AM</span>
+	<span class='label end-time'>Mar 24, 2021 04:31:02 AM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 3s+9ms</span>
 </div>
 	<div class='test-desc'>Google search </div>
 	<div class='test-steps'>
@@ -181,27 +181,27 @@
 			<tbody>
 				<tr class='log' status='info'>
 					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>5:11:13 PM</td>
+					<td class='timestamp'>4:30:59 AM</td>
 					<td class='step-details'>Starting the Test</td>
 				</tr>
 				<tr class='log' status='info'>
 					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>5:11:16 PM</td>
+					<td class='timestamp'>4:31:01 AM</td>
 					<td class='step-details'>This message is to show the information</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>5:11:16 PM</td>
+					<td class='timestamp'>4:31:02 AM</td>
 					<td class='step-details'>Google site up and running</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>5:11:16 PM</td>
+					<td class='timestamp'>4:31:02 AM</td>
 					<td class='step-details'>Test case Passed with Submit</td>
 				</tr>
 				<tr class='log' status='info'>
 					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>5:11:16 PM</td>
+					<td class='timestamp'>4:31:02 AM</td>
 					<td class='step-details'>Test case completed</td>
 				</tr>
 			</tbody>
@@ -214,14 +214,14 @@
 				<li class='test displayed active  fail' status='fail' bdd='false' test-id='2'>
 					<div class='test-heading'>
 						<span class='test-name'>Failed Test Case display</span>
-						<span class='test-time'>Sep 2, 2020 05:11:16 PM</span>
+						<span class='test-time'>Mar 24, 2021 04:31:02 AM</span>
 						<span class='test-status right fail'>fail</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Sep 2, 2020 05:11:16 PM</span>
-	<span class='label end-time'>Sep 2, 2020 05:11:17 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+945ms</span>
+	<span class='label start-time'>Mar 24, 2021 04:31:02 AM</span>
+	<span class='label end-time'>Mar 24, 2021 04:31:03 AM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 1s+154ms</span>
 </div>
 	<div class='test-desc'>Google Search Fail </div>
 	<div class='test-steps'>
@@ -236,32 +236,32 @@
 			<tbody>
 				<tr class='log' status='info'>
 					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>5:11:16 PM</td>
+					<td class='timestamp'>4:31:02 AM</td>
 					<td class='step-details'>Starting the Test</td>
 				</tr>
 				<tr class='log' status='info'>
 					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>5:11:17 PM</td>
+					<td class='timestamp'>4:31:03 AM</td>
 					<td class='step-details'>This message is to show the information</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>5:11:17 PM</td>
+					<td class='timestamp'>4:31:03 AM</td>
 					<td class='step-details'>Google site up and running</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>5:11:17 PM</td>
+					<td class='timestamp'>4:31:03 AM</td>
 					<td class='step-details'>Failed Details<img data-featherlight='screenshotFailTC.png' width='10%' src='screenshotFailTC.png' data-src='screenshotFailTC.png'></td>
 				</tr>
 				<tr class='log' status='fail'>
 					<td class='status fail' title='fail' alt='fail'><i class='material-icons'>cancel</i></td>
-					<td class='timestamp'>5:11:17 PM</td>
+					<td class='timestamp'>4:31:03 AM</td>
 					<td class='step-details'>Test case Failed with Submit</td>
 				</tr>
 				<tr class='log' status='info'>
 					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>5:11:17 PM</td>
+					<td class='timestamp'>4:31:03 AM</td>
 					<td class='step-details'>Test case completed</td>
 				</tr>
 			</tbody>
@@ -319,19 +319,19 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Sep 2, 2020 05:11:04 PM</div>
+					<div class='panel-lead'>Mar 24, 2021 04:30:49 AM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Sep 2, 2020 05:11:17 PM</div>
+			 		<div class='panel-lead'>Mar 24, 2021 04:31:03 AM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>0h 0m 13s+71ms</div>
+					<div class='panel-lead'>0h 0m 14s+37ms</div>
 				</div>
 			</div>
 		</div>
