--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e3c998">  <td>21/02/16 22:37:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ListnerDemo.ArrayMulti()[pri:0, instance:com.TestNGListeners.ListnerDemo@76f2b07d]">ArrayMulti</td> 
-  <td>main@926370398</td>   <td></td> </tr>
-<tr bgcolor="e3c998">  <td>21/02/16 22:37:01</td>   <td>37</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ListnerDemo.test1()[pri:0, instance:com.TestNGListeners.ListnerDemo@76f2b07d]">test1</td> 
-  <td>main@926370398</td>   <td></td> </tr>
-<tr bgcolor="e3c998">  <td>21/02/16 22:37:01</td>   <td>58</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ListnerDemo.test2()[pri:0, instance:com.TestNGListeners.ListnerDemo@76f2b07d]">test2</td> 
-  <td>main@926370398</td>   <td></td> </tr>
-<tr bgcolor="e3c998">  <td>21/02/16 22:37:18</td>   <td>16480</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ListnerDemo.test3()[pri:0, instance:com.TestNGListeners.ListnerDemo@76f2b07d]">test3</td> 
-  <td>main@926370398</td>   <td></td> </tr>
+<tr bgcolor="e3c998">  <td>21/04/08 19:42:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrowserStack.function01()[pri:0, instance:Saucelabs.BrowserStack@646d64ab]">function01</td> 
+  <td>main@455538610</td>   <td></td> </tr>
 </table>
